# duckdb_http_request

./: .gitignore  CLAUDE.md  CMakeLists.txt  DuckDB-HTTP.md  FIXME.md  FUNCTIONS.md  Makefile  README.md  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml  scheduled-1.4.yml  test.yml
src/: http_request_extension.cpp  httputil_request_extension.cpp
src/include/: http_request_extension.hpp  httputil_request_extension.hpp
test/sql/: http_echo.test  http_request.test  httputil_request.test
